--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li>Training kits will be provided.</li>
         <li>Refreshment Facilities</li>
         <li>Certification after completing courses</li>
+        <li>khaoya daoya ace</li>
     </ul>
 </body>
 </html>
